--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.24</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.webjars/bootswatch -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootswatch</artifactId>
+			<version>5.0.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
