--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # PostgreSQL configuration.
-spring.datasource.url = jdbc:sqlserver://localhost:1433/ANIVERSARIO
+spring.datasource.url = jdbc:sqlserver://192.168.2.7:1433;databaseName=ANIVERSARIO;encrypt=true;trustServerCertificate=true
 spring.datasource.username = sa
 spring.datasource.password = gabriela
 spring.jpa.hibernate.ddl-auto = update
+logging.level.sql=debug
