--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.grupolainmaculada</groupId>
 	<artifactId>aniversario</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>aniversario</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
